kubernetes/preprod/05-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preprod-mbooking-deployment
  namespace: preprod
  labels:
    env: preprod
    app: mbooking-ms
    layer: frontend
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 100%
  selector:
    matchLabels:
      env: preprod
      app: mbooking
      layer: frontend
  template:
    metadata:
      labels:
        env: preprod
        app: mbooking
        layer: frontend
    spec:
      containers:
        - name: mbooking
          image: 559220132560.dkr.ecr.ap-south-1.amazonaws.com/mbooking:<latest>
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 100Mi
              cpu: 100m
          ports:
            - containerPort: 8080
              name: api
          volumeMounts:
            - mountPath: /app/config
              name: application-config
      volumes:
        - name: application-config
          configMap:
            name: preprod-mbooking-application-config
