kubernetes/preprod/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    env: preprod
    app: mbooking
    layer: frontend
  name: preprod-mbooking-service
  namespace: preprod
spec:
  type: NodePort
  selector:
    app: mbooking
  ports:
    - name: api
      port: 8080
      targetPort: 8080
